--- a/adm/views/adm_application_views.xml
+++ b/adm/views/adm_application_views.xml
@@ -5,45 +5,67 @@
         <field name="name">adm.application.view.kanban</field>
         <field name="model">adm.application</field>
         <field name="arch" type="xml">
-            <kanban default_group_by="status_id" edit="false" class="o_kanban_small_column o_kanban_project_tasks"
+            <kanban default_group_by="status_id" edit="false"
+                    class="o_kanban_project_tasks o_res_partner_kanban"
                     disable_drag_drop_record="true" disable_sort_column="true">
                 <field name="total_optional_fields_completed"/>
                 <field name="partner_id"/>
                 <field name="image"/>
+                <field name="message_needaction_counter"/>
+                <field name="last_time_submitted"/>
+                <field name="responsible_user_id"/>
                 <field name="id"/>
+                <field name="activity_ids"/>
+                <field name="activity_state" />
+                <progressbar field="activity_state"
+                             colors='{"planned": "success", "today": "warning", "overdue": "danger"}'
+                             help="This bar allows to filter the opportunities based on scheduled activities."/>
                 <templates>
                     <t t-name="kanban-box">
-                        <div class="oe_kanban_global_click oe_semantic_html_override o_kanban_record_has_image_fill oe_kanban_card">
+                        <div class="oe_kanban_global_click o_kanban_record_has_image_fill o_res_partner_kanban">
                             <t t-set="placeholder" t-value="'/base/static/img/avatar_grey.png'"/>
+
                             <div class="o_kanban_image_fill_left d-none d-md-block"
-                                 t-attf-style="background-image: url('#{kanban_image('adm.application', 'image', record.id.raw_value, placeholder)}')">
-                                <t t-esc="record.partner_id.id"/>
+                                 t-attf-style="background-image:url('#{kanban_image('res.partner', 'image_128', record.partner_id.raw_value,  placeholder)}')"/>
+                            <div class="o_kanban_image d-md-none"
+                                 t-attf-style="background-image:url('#{kanban_image('res.partner', 'image_128', record.partner_id.raw_value,  placeholder)}')"/>
+                            <div class="o_dropdown_kanban dropdown">
+                                <a role="button" class="dropdown-toogle o-no-caret btn" data-toggle="dropdown"
+                                   data-display="static" href="#" aria-label="Dropdown menu"
+                                   title="Dropdown menu">
+                                    <span class="fa fa-ellipsis-v"/>
+                                </a>
+                                <div class="dropdown-menu" role="menu">
+                                    <a role="menuitem" type="edit" class="dropdown-item">Edit</a>
+                                    <a role="menuitem" type="delete" class="dropdown-item">Delete</a>
+                                </div>
                             </div>
-                            <div class="oe_kanban_content">
-                                <div class="o_kanban_record_top">
-                                    <div class="o_kanban_record_headings">
-                                        <strong class="o_kanban_record_title">
-                                            <field name="name"/>
-                                            <br/>
-                                            <field name="total_required_fields_completed"
-                                                   nolabel="1"
-                                                   string="Perc."
+                            <div class="oe_kanban_details">
+                                <strong class="o_kanban_record_title oe_partner_heading"><field name="name"/></strong>
+                                <ul>
+                                    <li>
+                                        <div class="d-flex justify-content-center w-100">
+                                            <field name="total_required_fields_completed" nolabel="1" string="Perc."
                                                    widget="percentpie"/>
-                                            <br/>
-                                        </strong>
-                                        <span><strong>Grade level:</strong> <field name="grade_level"/></span>
-                                        <br/>
-                                    </div>
-                                    <div class="o_dropdown_kanban dropdown">
-                                        <a role="button" class="dropdown-toogle o-no-caret btn" data-toggle="dropdown"
-                                           data-display="static" href="#" aria-label="Dropdown menu"
-                                           title="Dropdown menu">
-                                            <span class="fa fa-ellipsis-v"/>
-                                        </a>
-                                        <div class="dropdown-menu" role="menu">
-                                            <a role="menuitem" type="edit" class="dropdown-item">Edit</a>
-                                            <a role="menuitem" type="delete" class="dropdown-item">Delete</a>
                                         </div>
+                                    </li>
+                                    <li><strong>Grade level</strong>: <field name="grade_level"/></li>
+                                    <li><strong>Started at</strong>: <field name="create_date"/></li>
+                                </ul>
+
+                                <div class="o_kanban_record_bottom">
+                                    <div class="oe_kanban_bottom_left">
+                                        <t t-if="record.message_needaction_counter.raw_value">
+                                            <span role="alert" class='oe_kanban_mail_new mr4' title='Unread Messages'>
+                                                <i class='fa fa-comments' role="img" aria-label="Unread messages"/>
+                                                <t t-raw="record.message_needaction_counter.raw_value"/>
+                                            </span>
+                                        </t>
+                                        <field name="activity_ids" widget="kanban_activity"/>
+                                    </div>
+                                    <div class="oe_kanban_bottom_right">
+                                        <img t-att-src="kanban_image('res.users', 'image_128', record.responsible_user_id.raw_value)"
+                                         t-att-title="record.responsible_user_id.value" t-att-alt="record.responsible_user_id.value" class="oe_kanban_avatar"/>
                                     </div>
                                 </div>
                             </div>
@@ -58,7 +80,6 @@
         <field name="name">adm.application.view.form</field>
         <field name="model">adm.application</field>
         <field name="arch" type="xml">
-
             <form>
                 <header>
                     <field name="status_type" attrs="{'invisible': 1}"/>
@@ -208,12 +229,12 @@
 
                         </page>
                         <page name="status_history" string="Status history">
-<!--                            <field name="status_history_ids">-->
-<!--                                <tree>-->
-<!--                                    <field name="timestamp"/>-->
-<!--                                    <field name="note"/>-->
-<!--                                </tree>-->
-<!--                            </field>-->
+                            <field name="status_history_ids">
+                                <tree>
+                                    <field name="timestamp"/>
+                                    <field name="note"/>
+                                </tree>
+                            </field>
                         </page>
                         <page name="relationship_ids" string="Relationships">
                             <field name="relationship_ids" context="{'default_partner_1': partner_id}">
@@ -244,12 +265,30 @@
         <field name="model">adm.application</field>
         <field name="arch" type="xml">
             <search>
+
                 <filter name="group_status_id" string="Status" context="{'group_by':'status_id'}"/>
+                <filter name="current_school_year" string="Current School Year"
+                        domain="[('is_current_school_year', '=', True)]"/>
+
                 <searchpanel>
                     <field name="status_id" icon="fa-columns"/>
+                    <field name="grade_level" domain="[('active_admissions', '=', True)]" icon="fa-columns"/>
+                    <field name="school_year" domain="[('active_admissions', '=', True)]" icon="fa-columns"/>
                 </searchpanel>
             </search>
         </field>
     </record>
+
+    <act_window name="Send email"
+                res_model="mail.compose.message"
+                binding_model="adm.application"
+                binding_views="list"
+                view_mode="form"
+                target="new"
+                id="action_application_mass_mail"
+                context="{
+                    'default_composition_mode': 'mass_mail',
+                    'default_partner_to': '${object.id or \'\'}',
+                }"/>
 
 </odoo>
